Bug Fixes for videos and games screens
- Attempt to enable scrolling for games on iOS (slider game still
behaving strangely not showing last column in simulator)
- Bug on last page of videos/games
- Highlight most recent selection and return scroll after watching
video or playing game

--- a/app/assets/stylesheets/places.css.scss
+++ b/app/assets/stylesheets/places.css.scss
@@ -34,10 +34,32 @@
 }
 
 //*************************NEW SIMPLE FLOAT CARDS PAGE FOR VIDEOS & GAMES
-#cards-float {
+.cards-float {
+	opacity: 1;
+
   padding: 0;
   width: 85%;
+/*	height: auto;*/
   margin: 0 auto;
+
+  -webkit-transition: .5s;
+     -moz-transition: .5s;
+      -ms-transition: .5s;
+          transition: .5s;
+}
+
+.cards-float-hide {
+	opacity: 0;
+	width: 0px;
+	height: 0px;
+	position: absolute;
+	overflow: hidden; //Very important otherwise will continue to take up space on the page
+/*	position: absolute;*/
+	
+  -webkit-transition: .5s;
+     -moz-transition: .5s;
+      -ms-transition: .5s;
+          transition: .5s;
 }
 
 .card-item{
@@ -56,7 +78,6 @@
           transition: opacity .5s;
 }
 
-
 .card-item-small {
 	float: left;
   height: auto;
@@ -64,13 +85,19 @@
 //  min-width: 100px;
 //	max-width: 200px;
 	margin: 0;
-	padding: 0 5px 5px 0;
+	padding: 1% 1% 1% 1%;
 	overflow: hidden;
+}
+
+.border {
+	border-style: double;
+	border-width: 5px;
+	border-color: #98bf21;
 }
 
 .card-item-large {
 	margin: 0;
-	padding: 0 5px 5px 0;
+	padding: 1% 1% 1% 1%;
 	float: left;
 	clear: both;
   min-width: 100%;
@@ -79,16 +106,24 @@
 
 .card-large-content-hide {
 	opacity: 0;
-	width: 0;
-	height: 0;
-//	display:none;
+	position: absolute;
+	overflow: hidden; //Very important otherwise will continue to take up space on the page
+	width: 0px;
+	height: 0px;
+  -webkit-transition: 1s;
+     -moz-transition: 1s;
+      -ms-transition: 1s;
+          transition: 1s;
+					/*
+	display:none;*/
 }
 
 .card-large-content {
-	  -webkit-transition: opacity 1s;
-	     -moz-transition: opacity 1s;
-	      -ms-transition: opacity 1s;
-	          transition: opacity 1s;
+	opacity: 1;
+	  -webkit-transition: 1s;
+	     -moz-transition: 1s;
+	      -ms-transition: 1s;
+	          transition: 1s;
 /*	width: 100%;
 	height: 100%;
 	position: fixed;
@@ -98,9 +133,14 @@
 	margin: 5% 0 0% -50%;
 	padding: 0 5% 0 5%;
 	z-index: 10000;*/
-						overflow: scroll;
+//						overflow: scroll;
 						z-index: 10000;
+/*						min-width: 650px;
+						min-height: 400px;
 						position: fixed;
+						*/
+/*						padding: 10%;*/
+						
 //						padding: 0 5% 0 5%;
 // 	border-radius: 5px 5px 5px 5px;
 // 	background-size: contain;
@@ -108,6 +148,15 @@
 	//	overflow: scroll;
 	//  min-width: 500px;
 }
+
+.vimeo-frame {
+}
+
+.game-frame {
+  min-width: 650px;
+//	min-height: 400px;
+}
+
 
 #close-large-content
 {
@@ -255,14 +304,11 @@
   width: 100%;
 }
 
-.vimeo-frame {
+.body-min-game-width
+{
+  min-width: 650px;	
+	overflow: auto;
 }
-
-.game-frame {
-  min-width: 650px;
-	min-height: 400px;
-}
-
 
 
 .blank328x185 {
@@ -386,7 +432,7 @@
  .card-item-small {
 		width: 33.3%;
 	}	
-
+	
 }
 
 
@@ -407,11 +453,11 @@
 	   height: auto;
 	   overflow: scroll;
 	 }
-
+	 
 	 .card-item-small {
 		 width: 50%;
 		}	
-
+		
 	 .card-item-large {
 //	 	display: box;
 	 	clear: both;
@@ -462,6 +508,8 @@
 
 .vacuum-events-on
 {
+	top: 0;
+	left: 0;
 	position: fixed;
 	margin: 0;
 	padding: 0;
@@ -469,5 +517,12 @@
 	height: 100%;
 	z-index: 9000;
 //	opacity: 0;
+}
+
+
+.card-item-highlight {
+ position: relative;
+	padding: 1% 0 1% 0;
+	background-color: lightblue;
 }
 
